create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ document.onclick=reEnable
                     <p class="lead"><br>
 <br><strong>Cost Per Action</strong><br>&nbsp;это оплата за действие &nbsp;<br>Принцип <br>работы <br>партнёрского маркетинга<br> 
 <br><strong>приведи покупателя&nbsp;<br>получи за это вознаграждение </strong>&nbsp;<br></p>
-                    <div class="mbr-buttons--center"><a class="btn btn-lg btn-info-outline btn-info" href="https://kraiton1.site/Osnova/" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>СКАЧАТЬ &nbsp;ИНФО</a> </div>
+                    <div class="mbr-buttons--center"><a class="btn btn-lg btn-info-outline btn-info" href="https://vk.cc/aueWtA" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>СКАЧАТЬ &nbsp;ИНФО</a> </div>
                 </div>
             </div>
         </div>
