--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ document.onclick=reEnable
 <!-- /Analytics -->
 
 
-  <section class="mbr-section mbr-section-full mbr-parallax-background" id="header1-0" data-rv-view="0" style="background-image: url(assets/images/mbr-1920x1406.jpg);">
+  <section class="mbr-section mbr-section-full mbr-parallax-background" id="header1-0" data-rv-view="22" style="background-image: url(assets/images/mbr-1920x1406.jpg);">
     <div class="mbr-table-cell">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(213, 244, 240);"></div>
         <div class="container">
@@ -67,7 +67,7 @@ document.onclick=reEnable
     </div>
 </section>
 
-<section class="mbr-section" id="msg-box3-n" data-rv-view="5" style="background-color: rgb(255, 248, 224); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section" id="msg-box3-n" data-rv-view="27" style="background-color: rgb(255, 248, 224); padding-top: 0rem; padding-bottom: 0rem;">
     
     <div class="container">
         <div class="row text-xs-center">
@@ -82,10 +82,10 @@ document.onclick=reEnable
     </div>
 </section>
 
-<footer class="mbr-section mbr-section-nopadding mbr-footer" id="footer1-l" data-rv-view="3" style="background-color: rgb(38, 39, 44); padding-top: 1rem; padding-bottom: 0rem;">
+<footer class="mbr-section mbr-section-nopadding mbr-footer" id="footer1-l" data-rv-view="25" style="background-color: rgb(38, 39, 44); padding-top: 1rem; padding-bottom: 0rem;">
     
     <div class="container">
-        <p>Copyright (c) 2020. kraiton 1.It is forbidden to copy materials from the website for free. &nbsp; g-mail : <a href="mailto:kraiton379@gmail.com">kraiton379@gmail.com</a>&nbsp; &nbsp;- &nbsp; Паблик в : <a href="https://vk.com/1kraiton" target="_blank">ВКонтакте</a>&nbsp; - &nbsp;<a href="https://glopart.ru/public/200039" target="_blank">Партнерская программа</a></p>
+        <p>Copyright (c) 2020. kraiton 1.It is forbidden to copy materials from the website for free. &nbsp; g-mail : <a href="mailto:kraiton379@gmail.com">kraiton379@gmail.com</a>&nbsp; &nbsp;- &nbsp; Паблик в : <a href="https://vk.com/1kraiton" target="_blank">ВКонтакте</a>&nbsp; - &nbsp;Партнерская программа</p>
     </div>
 </footer>
 
